@@ -1,3 +1,12 @@
+2009-09-21  Mo DeJong  <mdejong@users.sourceforge.net>
+
+        * src/jacl/tcl/lang/Regex.java (replaceFirst, parseSubSpec):
+        Fixup comments, make logic more readable.
+        Remove code block that replaced \ with \\ in replaceFirst.
+        * src/jacl/tcl/lang/RegsubCmd.java (cmdProc):
+        Add comments, rewrite block logic.
+        * tests/tcl/regexp.test: Added simple regsub tests.
+
 2009-09-19  Mo DeJong  <mdejong@users.sourceforge.net>
 
         Checkin reworked Java regexp module.
